# ros_noetic_curse

./: README.md
devel/: .catkin  local_setup.sh
devel/lib/ackermann_vehicle_gazebo/: ackermann_controller
devel/lib/beginner_tutorial/: talker.py
devel/lib/pkgconfig/: ackermann_vehicle_description.pc  ackermann_vehicle_gazebo.pc  ackermann_vehicle_navigation.pc  beginner_tutorial.pc  my_project_ros.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/share/ackermann_vehicle_description/cmake/: ackermann_vehicle_descriptionConfig.cmake
devel/share/ackermann_vehicle_gazebo/cmake/: ackermann_vehicle_gazeboConfig.cmake
devel/share/ackermann_vehicle_navigation/cmake/: ackermann_vehicle_navigationConfig.cmake
devel/share/beginner_tutorial/cmake/: beginner_tutorialConfig.cmake
devel/share/my_project_ros/cmake/: my_project_rosConfig.cmake
src/beginner_tutorial/: CMakeLists.txt
src/my_project_ros/: CMakeLists.txt  package.xml
src/my_project_ros/launch/: robot_description.launch  turtlemimic.launch  world.launch
src/my_project_ros/src/: prueba_cv.py  prueba_mov.py
src/my_project_ros/urdf/: my_robot.gazebo  my_robot.xacro  my_robot2.xacro
src/my_project_ros/world/: mundo_jorge1.world
src/my_robot/: CMakeLists.txt  my_robot.sdf
src/my_robot/arduino/prueba_ultrasonido/: prueba_ultrasonido.ino
src/my_robot/script/: model_push.cc  velodyne_plugin.cc
src/my_robot/world/: mundo_jorge.world  velodyne.world
(+3 files in other folders)
